# cn-pcas-geo

./: README.md  check_missing_centers.py  compare_coverage.py  debug_bj.py  process_xzqh.py  update_coordinates_from_amap.py  xzqh_2023_tree.json  xzqh_with_amap_coordinates.json
fb_dist/: CMakeLists.txt  README_FB.md  build_release.sh  convert_json_to_fb.py  query_sample  query_sample.cpp  xzqh.fbs  xzqh_generated.h
fb_dist/cn_xzqh_lib/: README.md  demo.html  xzqh_loader.js
fb_dist/wasm/: build_wasm.sh  clean.sh  index.html  xzqh_wasm.cpp  xzqh_wasm.js
